<package>
  <name>youbot_navigation_local</name>
  <version>1.0.0</version>
  <description>Local navigation</description>
  <maintainer email="test@test.org">Alexey Zakharov</maintainer>

  <license>LGPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_oodl</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Alexey Zakharov</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>move_base</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>move_base</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>move_base</test_depend> -->

</package>
