<package>
  <name>tower_of_hanoi_sdk</name>
  <version>1.0.0</version>
  <description>tower_of_hanoi_sdk</description>
  <maintainer email="test@test.org">Pinaki Sunil Banerjee</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/tower_of_hanoi_sdk"</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Pinaki Sunil Banerjee</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>brics_3d</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>brics_3d</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>pcl</test_depend> -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>opencv2</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>brics_3d</test_depend> -->

</package>
