<package>
  <name>youbot_registration</name>
  <version>1.0.0</version>
  <description>youbot_registration
     
	   The youbot_registration package contains a method to compute an unknown 
	   camera frame (extrinsic camera parameters) relative to the KUKA youBot
	   in particular for the Kinect 3D camera. This package will use a marker placed 
	   on the gripper at the KUKA youBot manipulator and assumes the pattern will 
	   be visible by the camera.
	   
       The code has been contributed in cooperation with inos Automationssoftware GmbH.</description>
  <maintainer email="">Constantinos Lantos (inos Automationssoftware GmbH)</maintainer>

  <license>LGPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_registration</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Constantinos Lantos (inos Automationssoftware GmbH)</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>pcl</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>brics_actuator</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->

</package>